# arwn-aifse

./: .gitignore  README.md  app.py  demo_results.pkl  generate_deck.py  main.py  output_schedule_apr2026.csv  output_shift_summary_apr2026.csv  presentation_deck.pptx  pyproject.toml
data/: agents.jsonl  data_dictionary.csv  historical_performance.csv  leave_requests_apr_2026.csv
src/: __init__.py  config.py  data_loader.py
src/evaluation/: fairness.py  metrics.py  remediation.py
src/forecasting/: __init__.py  demand_model.py  feature_engineering.py  staffing_optimizer.py
src/scheduling/: __init__.py  constraints.py  preferences.py  scheduler.py
tests/: test_bonus.py  test_data.py  test_forecasting.py  test_scheduling.py
