[project]
name = "cs-scheduling"
version = "1.0.0"
description = "CS Demand Forecasting & Shift Scheduling System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "ortools>=9.8",
    "streamlit>=1.30",
    "plotly>=5.18",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
